Setup: Form input box

--- a/templates/index.html
+++ b/templates/index.html
@@ -2,4 +2,9 @@
 
 {% block content %}
     <h1>{% block title %} Sheets Scraper {% endblock %}</h1>
+    <form>
+        <label for="fname">Google Sheets URL:</label>
+        <input type="text" id="fname" name="fname"><br><br>
+        <button>Submit</button>
+    </form>
 {% endblock %}
