--- a/templates/base.html
+++ b/templates/base.html
@@ -10,7 +10,7 @@
     <title>{% block title %} {% endblock %}</title>
   </head>
   <body>
-    <nav class="navbar navbar-expand-md navbar-light" style="background-color: #3EB648">
+    <nav class="navbar navbar-expand-md navbar-light justify-content-center" style="background-color: #3EB648">
         <a class="nav-link" href="{{ url_for('index')}}" style="color: #000000">Sheets Scraper</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
